feat: complete auth, alteration booking system, and all three portals
- Backend: JWT + OAuth2 auth with httpOnly cookies, Redis token revocation,
  @Lazy circular dep fix, fail-open Redis pattern, AlterationOrder 8-state
  status machine with full CRUD, Flyway V7/V8 migrations with 40+ seeded
  services, RateLimitFilter, GlobalExceptionHandler, local Spring profile
  for Docker dev

- customer-web: login/register/OAuth callback pages, navbar with auth state
  and user dropdown, 7-step alteration booking wizard, order list with status
  badges, order detail with status timeline

- tailor-portal: TAILOR-role-gated login, dashboard sidebar layout,
  alteration jobs with expand/collapse, status advance buttons, tailor notes

- admin-dashboard: ADMIN-role-gated login, alteration orders with revenue
  breakdown and status filters, assign tailor by ID, status override,
  users table

- Shared packages: @stitchit/ui Toast system, @stitchit/api-client with
  full AlterationEndpoints + Zod schemas, @stitchit/types updated

- CODEBASE.md: 14-section documentation of full architecture

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>